# technical-notes-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  import_notes_to_neon.py  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_app_cache_and_bootstrap_indexes.py
app/: main.py
app/api/v1/: deps.py  router.py
app/api/v1/routes/: admin.py  bootstrap.py  exports.py  health.py  search.py  tables.py  taxonomy.py  topics.py
app/core/: cache.py  config.py  logging.py  middleware.py  security.py
app/db/: base.py  session.py
app/models/: base.py  content.py
app/repositories/: bootstrap.py  search.py  tables.py  taxonomy.py  topics.py
app/schemas/: bootstrap.py  common.py  exports.py  pagination.py  search.py  tables.py  taxonomy.py  topics.py
app/utils/: http.py  text.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  FRONTEND_INTEGRATION.md  PERFORMANCE_OPTIMIZATION.md  SCHEMA_DECISIONS.md
infra/sql/: neon_runtime_notes.sql
scripts/: create_admin_token.py  import_curated_notes.mjs  sample_topic.json
technical_notes_deep_seed_pack_v1/: seed_technical_notes_fixed.sh  technical_notes_deep_seed_chunk_v1_fixed_no_html_anchors.json  technical_notes_deep_seed_preview_v1_fixed_no_html_anchors.md  technical_notes_seed_anchor_fix_report.txt
technical_notes_deep_seed_pack_v1/per_topic/: algorithms-interview-deep-dive.json  aws-route53-deep-dive.json  data-structures-interview-deep-dive.json  docker-deep-dive.json  kubernetes-deep-dive.json  pytorch-deep-dive.json
tests/: test_text_utils.py
